--- a/themes/cocoa/static/css/main.css
+++ b/themes/cocoa/static/css/main.css
@@ -56,7 +56,7 @@ body {
   width: 100%;
   min-height: 100%;
   font-weight: 400;
-  font-family: 'Open Sans', 'Helvetica Neue', 'Arial', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   color: #111;
   line-height: 1.6;
   text-rendering: optimizeLegibility !important;
