darken colors for accessibility, remove override.css

--- a/themes/cocoa/dev/less/main.less
+++ b/themes/cocoa/dev/less/main.less
@@ -12,10 +12,10 @@
 
 @black: #333;
 @black-content: #111;
-@gray: #666;
-@accent: #428bca; // alt: rgba(244,109,44,1);
-@link-hover: #2a6496; // alt: rgba(222,90,29,1);
-@complementary-accent: #1DA1DE;
+@gray: #555;
+@accent: #1872bf; // alt: rgba(244,109,44,1);
+@link-hover: #104e84; // alt: rgba(222,90,29,1);
+@complementary-accent: #18bf66;
 @background: #f7f7f7;
 @compensated-black: #555;
 @compensated-gray: #999;
