--- a/themes/cocoa/layouts/partials/footer_scripts.html
+++ b/themes/cocoa/layouts/partials/footer_scripts.html
@@ -2,6 +2,7 @@
 {{ template "_internal/google_analytics_async.html" . }}
 
 {{ if .Site.Params.highlightjs }}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/{{ .Site.Params.highlightjsStyle | default "default" }}.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
   {{ range .Site.Params.highlightjslanguages }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/languages/{{.}}.min.js"></script>
